Agrego una linea nueva

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur hic minus magnam officiis veritatis
             placeat ad porro dolores explicabo! Maxime repellendus voluptas aut expedita rerum veritatis officia iure id
             delectus.</p>
+            <b>Agrego una nueva linea a la redaccion</b>
         </div>
     </main>
 </body>
