Agrego unas nuevas lineas al texto y cambio el contenedor

--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogpost</title>
+    <link rel="stylesheet" href="./styles/styles.css"
 </head>
 
 <body>
     <main>
         <div class="Containner">
-            <h1>Este es un titulo</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur hic minus magnam officiis veritatis
-            placeat ad porro dolores explicabo! Maxime repellendus voluptas aut expedita rerum veritatis officia iure id
-            delectus.</p>
-            <b>Agrego una nueva linea a la redaccion</b>
+            <div>
+                <h1>Este es un titulo</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur hic minus magnam officiis veritatis
+                placeat ad porro dolores explicabo! Maxime repellendus voluptas aut expedita rerum veritatis officia iure id
+                delectus.</p>
+                <p>Agrego una nueva linea a la redaccion</p>
+            </div>
+            <div>
+                <p>Este es un segundo parrafo</p>
+            </div>
         </div>
     </main>
 </body>
