--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="Containner">
             <div>
-                <h1>Este es un titulo</h1>
+                <h1>Esta es la version 2.0 trabajando con git y github</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur hic minus magnam officiis veritatis
                 placeat ad porro dolores explicabo! Maxime repellendus voluptas aut expedita rerum veritatis officia iure id
                 delectus.</p>
