Prueba para ver el funcionamiento del log

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 placeat ad porro dolores explicabo! Maxime repellendus voluptas aut expedita rerum veritatis officia iure id
                 delectus.</p>
                 <p>Agrego una nueva linea a la redaccion</p>
+                <p>Prueba para ver como funciona el log</p>
             </div>
             <div>
                 <p>Este es un segundo parrafo</p>
